main/default/objects/Tax_Exemption__c/Tax_Exemption__c.object-meta.xml
<CustomObject>
    <label>Tax Exemption</label>
    <nameField>
        <displayFormat>TE-{0000000000}</displayFormat>
        <label>Tax Exemption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Exemptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>