main/default/objects/Tax_Exemption__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Exemptions</relationshipLabel>
    <relationshipName>Tax_Exemptions</relationshipName>
    <type>Lookup</type>
</CustomField>