main/default/objects/Tax_Exemption__c/fields/Approval_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Approval_Indicator__c</fullName>
    <label>Approval Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>