main/default/objects/Tax_Exemption__c/fields/Billing_Rate_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rate_Type_Code__c</fullName>
    <label>Billing Rate Type Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>