main/default/objects/Tax_Exemption__c/fields/CANCD__c.field-meta.xml
<CustomField>
    <fullName>CANCD__c</fullName>
    <label>CANCD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>