main/default/objects/Tax_Exemption__c/fields/Customer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Detail</label>
    <referenceTo>Customer_Detail__c</referenceTo>
    <relationshipLabel>Tax Exemptions</relationshipLabel>
    <relationshipName>Tax_Exemptions</relationshipName>
    <type>Lookup</type>
</CustomField>