main/default/objects/Tax_Exemption__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Legacy ID from the Customer Detail</description>
    <formula>Customer_Detail__r.Legacy_ID__c</formula>
    <label>Legacy ID</label>
    <type>Text</type>
</CustomField>