main/default/objects/Tax_Exemption__c/fields/PER_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PER_End_Date__c</fullName>
    <label>PER End Date</label>
    <type>Date</type>
</CustomField>