main/default/objects/Tax_Exemption__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <label>Product ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>