main/default/objects/Tax_Exemption__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>RESALE (GENERAL)</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>DOMESTIC CARRIER</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>NO RECIPROCAL AGREEMENT</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>DIPLOMAT/EMBASSY</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>PROVINCIAL GOVERNMENT</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>STATUS INDIANS</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>FEDERAL GOVERNMENT</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>INTERNATIONAL ORGANIZATION</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>U.S. CARRIERS</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>CROWN CORPORATION - FEDERAL</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>CROWN CORPORATION - PROVINCIAL</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>AWAITING INFO (TAX DEPT ONLY)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>