main/default/objects/Tax_Exemption__c/fields/STCD__c.field-meta.xml
<CustomField>
    <fullName>STCD__c</fullName>
    <label>STCD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>