main/default/objects/Tax_Exemption__c/fields/TPCD__c.field-meta.xml
<CustomField>
    <fullName>TPCD__c</fullName>
    <label>TPCD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>