main/default/objects/Tax_Exemption__c/recordTypes/BAN.recordType-meta.xml
<RecordType>
    <fullName>BAN</fullName>
    <active>false</active>
    <label>BAN</label>
</RecordType>